[package]
name = "xml_dom"
version = "0.1.2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "A Rust crate providing a reasonably faithful implementation of the W3C DOM Core"
documentation = "https://docs.rs/xml_dom/"
repository = "https://github.com/johnstonskj/rust-xml_dom.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
log = "0.4.8"
